--- a/kadry/src/main/webapp/pit/sub/dialog/dialog_karta_wynagrodzen.xhtml
+++ b/kadry/src/main/webapp/pit/sub/dialog/dialog_karta_wynagrodzen.xhtml
@@ -51,9 +51,9 @@
                     </p:column>-->
                     <p:column width="60">
                         <f:facet name="header">
-                            <h:outputText value="brutto"/>
+                            <h:outputText value="przych. polska"/>
                         </f:facet>
-                        <bcf:outputpl value="#{itemkarta.brutto}" stylePlus="#{itemkarta.brutto eq 0 ? 'color:silver':null}"/>
+                        <bcf:outputpl value="#{itemkarta.dochodpolska}" stylePlus="#{itemkarta.dochodpolska eq 0 ? 'color:silver':null}"/>
                     </p:column>
                     <p:column width="60">
                         <f:facet name="header">
