--- a/kadry/src/main/webapp/pit/sub/pit.xhtml
+++ b/kadry/src/main/webapp/pit/sub/pit.xhtml
@@ -120,7 +120,7 @@
                             <h:outputText value="us"/>
                         </f:facet>
                         <p:commandButton icon="pi pi-envelope" actionListener="#{pitWysylkaView.robPIT1129(itempity44)}" update="@parent:@parent" 
-                                         rendered="#{podpisView.jestkarta eq true and itempity44.przekroczenie eq false and itempity44.status eq null}">
+                                         rendered="#{podpisView.jestkarta eq true and itempity44.status eq null}">
 <!--                            <p:confirm type="popup" header="Potwierdzenie" message="Wysłać deklarację do urzędu?" icon="pi pi-exclamation-triangle"/>-->
                         </p:commandButton>
                     </p:column>
