naprawy dom pit11 fortefiber

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_korekta.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_korekta.xhtml
@@ -72,6 +72,9 @@
                              <p:column headerText="koszty uz.przych.">
                                  <bcf:outputpl value="#{itempasekpod.kosztyuzyskania}"/>
                             </p:column>
+                              <p:column headerText="koszty przekroczenie">
+                                 <bcf:outputpl value="#{itempasekpod.przekroczeniekosztyuzyskania}"/>
+                            </p:column>
                             <p:column headerText="podstawa pod. zagr. pln">
                                 <bcf:outputpl value="#{itempasekpod.podstawaopodatkowaniazagranica}"/>
                             </p:column>
