ostatnie naprawy pit 11

--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_korekta.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_korekta.xhtml
@@ -120,7 +120,7 @@
                             </p:column>
                         </p:dataTable>
                     </p:outputPanel>
-                    <p:outputPanel style="padding: 10px;">
+<!--                    <p:outputPanel style="padding: 10px;">
                         <p:panelGrid columns="10" style="width: 900px;background-color: #BDBDBD;">
                             <h:outputText value="stary przychód"/>
                             <bcf:outputpl value="#{pasekwynagrodzenkorektaView.pitKorektaNiemcy.staryprzychod}"/>
@@ -153,7 +153,7 @@
                             <h:outputText value="nowy podatek niemiecki"/>
                             <bcf:outputpl value="#{pasekwynagrodzenkorektaView.pitKorektaNiemcy.nowypodatekniemiecki}"/>
                         </p:panelGrid>
-                    </p:outputPanel>
+                    </p:outputPanel>-->
                 </h:form>
             </p:tab>
             <p:tab title="firma">
