--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
@@ -192,7 +192,9 @@
                             <h:outputText value="FGŚP zwol. wiek" rendered="#{itempasek.fpprzekroczeniewiek eq true}"/>
                             <h:outputText value="FGŚP powrót mac." rendered="#{itempasek.fppowrotmacierzynski eq true}"/>
                         </p:column>
-
+                         <p:column>
+                             <h:outputText value="#{itempasek.id}"/>
+                        </p:column>
                     </p:row>
                     <p:row>
                         <p:column>
